# vncmanager-greeter

./: CMakeLists.txt  Greeter.cpp  Greeter.h  Greeter.ui  ManagerConnection.cpp  ManagerConnection.h  README.md  Session.cpp  Session.h  greeter.qml  main.cpp  vncmanager-greeter.conf
style/: clouds.qss  opensuse.qml  opensuse.qss  suse.qml  suse.qss
